# rust_todo

./: Cargo.toml
migrations/2022-07-04-120402_add_users/: up.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs
src/models/: mod.rs  todo.rs
