[package]
name = "rust_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
serde_derive = "1.0"
warp = "0.3"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
diesel = { version = "1.4.4", features = ["postgres"] }
jsonwebtoken = "7.2.0"